[tool.poetry]
name = "formtools-formset"
version = "1.0.1-alpha.0"
description = "A form.set generator."
authors = ["Takahiro Ueda <tueda@st.seikei.ac.jp>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tueda/formset"
keywords = ["configuration", "form"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
]
packages = [{ include = "formset" }]

[tool.poetry.scripts]
formset = "formset.formset:main"

[tool.poetry.dependencies]
python = "~2.6 || ~2.7 || ^3.2"
argparse = { version = "^1.4.0", python = "~2.6" }

[tool.poetry.dev-dependencies]
pytest = "^3.2.5"
pytest-cov = "^2.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
