[tool.poetry]
name = "formtools-formset"
version = "1.0.1-alpha.0"
description = "A form.set generator."
authors = ["Takahiro Ueda <t.ueda.od@juntendo.ac.jp>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tueda/formset"
keywords = ["configuration", "form"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
]
packages = [{ include = "formset" }]

[tool.poetry.scripts]
formset = "formset.formset:main"

[tool.poetry.dependencies]
python = "~2.6 || ~2.7 || ^3.2"
argparse = { version = "^1.4.0", python = "~2.6" }

[tool.poetry.dev-dependencies]
pytest = [
    { version = "^3.2.5", python = "~2.6 || ~3.2 || ~3.3" },
    { version = "^4.6.11", python = "~2.7 || ~3.4" },
    { version = "^6.1.2", python = "~3.5" },
    { version = "^7.0.1", python = "~3.6 || ~3.7" },
    { version = "^8.3.5", python = ">=3.8" },
]
pytest-cov = [
    { version = "^2.5.1", python = "~2.6 || ~2.7 || ~3.2 || ~3.3 || ~3.4 || ~3.5" },
    { version = "^4.0.0", python = "~3.6 || ~3.7" },
    { version = "^5.0.0", python = "~3.8" },
    { version = "^6.1.1", python = ">=3.9" },
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
